Fix: margins for donate blurb on mobile.

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -227,11 +227,10 @@ $button-size: 1.5rem;
 		}
 	}
 }
-#donate {
-	margin-bottom: 2em;
+.article-author-side #donate {
 	margin-top: 1em;
 }
-#index {
+#index, #donate {
 	@include container;
 	@include grid(12,10);
 	@include prefix(12,1);
